Restored home.html and about.html

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>WELCOME TO STEMGER WEBSITE</h2>
-    <P>HELLO HAVE NICE NICE EXPERIENCE</P>
+    <h1>about Page</h1>
 </body>
 </html>
+ 
